从新构思，从零开始

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">AY_BOX</string>
     <string name="title_activity_splash">SplashActivity</string>
     <string name="title_activity_left">LeftActivity</string>
+    <string name="title_activity_main">MainActivity</string>
 </resources>
