主界面重构 极光推送初步设置

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="title_activity_splash">SplashActivity</string>
     <string name="title_activity_left">LeftActivity</string>
     <string name="title_activity_main">MainActivity</string>
+    <string name="drawer_open">OPEN</string>
+    <string name="drawer_close">CLOSE</string>
 </resources>
