--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">AY_BOX</string>
+    <string name="app_name">福利盒子</string>
     <string name="title_activity_splash">SplashActivity</string>
     <string name="title_activity_left">LeftActivity</string>
     <string name="title_activity_main">MainActivity</string>
